person tab z-index fix

--- a/src/style/Person.scss
+++ b/src/style/Person.scss
@@ -171,7 +171,7 @@
 
   .personTab {
     position: absolute;
-    z-index: 4;
+    z-index: 24;
     top: 0;
     padding: 18px;
     width: 184px;
